--- a/webModule/src/main/webapp/css/attachments.css
+++ b/webModule/src/main/webapp/css/attachments.css
@@ -2,10 +2,10 @@ table {
     margin: 10px auto 10px;
     border-collapse: collapse;
 }
-#mainForm input {
+#attachmentsForm input {
     cursor: pointer;
 }
-#mainCheckbox {
+#attachCheckbox {
     float: left;
 }
 th {
@@ -31,7 +31,6 @@ tr:hover {
 }
 .images img {
     display: block;
-
 }
 img {
     padding: 4px;
@@ -39,8 +38,25 @@ img {
     margin: 0 auto;
     cursor: pointer;
 }
-.majorButtons{
+.majorAttachButtons{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.attachmentsForm input {
+    cursor: pointer;
+    border-radius: 8px;
+    border: 1px solid black;
+    background-color: #b0e0e6;
+    color: black;
+    padding: 7px 7px;
+    text-align: center;
+    display: inline-block;
+    font-size: 14px;
+    margin: 0 5px 0 5px;
+    width: 200px;
+}
+.attachmentsForm input:hover {
+    background-color: #d5e6a2;
+    color: black;
 }
