--- a/webModule/src/main/webapp/css/footer.css
+++ b/webModule/src/main/webapp/css/footer.css
@@ -1,10 +1,15 @@
 .footer{
-    width: 100%;
+    flex: 0 0 auto;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width : 100%;
     height : 3%;
-    left: 0; bottom: 0;
-    position: fixed;
-    text-align : center;
     background-color : #8d8d90;
+}
+.footer a.foot-text{
     color : white;
     font-size: 20px;
+    cursor: pointer;
 }
