--- a/webModule/src/main/webapp/css/editForm.css
+++ b/webModule/src/main/webapp/css/editForm.css
@@ -7,3 +7,13 @@ fieldset {
     margin: 0;
     padding: 0;
 }
+#fullContactInfoForm img {
+    width: 200px;
+    height: 200px;
+    cursor: default;
+}
+#editForm img {
+    width: 200px;
+    height: 200px;
+    cursor: default;
+}
