--- a/webModule/src/main/webapp/css/header.css
+++ b/webModule/src/main/webapp/css/header.css
@@ -8,8 +8,15 @@
     height : 4%;
     background-color : #8d8d90;
 }
-.header a.title{
+.header a.title {
     color : white;
     font-size: 30px;
+    cursor: pointer;
+}
+.header img {
+    position: fixed;
+    right: 0;
+    padding: 4px;
+    width: 20px;
     cursor: pointer;
 }
