--- a/webModule/src/main/webapp/css/contacts.css
+++ b/webModule/src/main/webapp/css/contacts.css
@@ -75,6 +75,7 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
+    visibility: visible;
 }
 dialog{
     border-radius: 20px;
@@ -154,6 +155,14 @@ tr:hover {
     display:inline-flex;
 }
 #fullContactInfoBody {
+    display: block;
+    margin: 10px 20px;
+    text-align: -webkit-left;
+    color: black;
+    font-size: larger;
+    font-style: italic;
+}
+#creator {
     display: block;
     margin: 10px 20px;
     text-align: -webkit-left;
