--- a/webModule/src/main/webapp/css/wrapper.css
+++ b/webModule/src/main/webapp/css/wrapper.css
@@ -2,16 +2,19 @@ html,
 body {
     height: 100%;
     margin: 0;
-    background-image: url(/contactsList/images/siteBackground.png);
+    background-image: url(/images/siteBackground.png);
 }
+
 .wrapper {
     display: flex;
     flex-direction: column;
     height: 100%;
 }
+
 .content {
     flex: 1 0 auto;
 }
+
 button {
     cursor: pointer;
     border-radius: 8px;
@@ -25,6 +28,7 @@ button {
     margin: 0 5px 0 5px;
     width: 200px;
 }
+
 .button:hover {
     background-color: #d5e6a2;
     color: black;
